src/test/c/reject/34-multiple-nested-blocks-missing-braces.arcx
{
    if (a == b) {
        while (x < 10) {
            for(i : List) {
                y:int=2;
        }
    }
} 